# btc-tracker

./: README.md
go/: go.mod
go/cmd/reader/: main.go
go/cmd/scraper/: main.go
python/: chart.py  reader.py  scraper.py
rust/: Cargo.toml
